deployment-configs/k8s-manifests/apps/todo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    app.kubernetes.io/part-of: todo-list-app
    app.kubernetes.io/managed-by: argocd
